师承页面-编写

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1151,10 +1151,12 @@
 				</div>
 				<div class="both"></div>
 			</div>
+			<!-- 提问开始 -->
 			<div class="QA_main">
 				<div class="QA_doubt">
 					<img src="/xcview/images/touxiang.png" alt="" class="QA_doubt_img" />
 					<div class="QA_doubt_main">
+						<img src="/xcview/images/QA_doubt.png" alt="" class="QA_doubt_main_img" />
 						肌肉萎缩都有哪些早期的症状？治疗肌肉萎缩的最佳治疗方案
 					</div>
 					<div class="both"></div>
@@ -1162,16 +1164,70 @@
 				<div class="QA_solution">
 					<img src="/xcview/images/touxiang.png" alt="" class="QA_solution_img" />
 					<div class="QA_solution_main">
+						<img src="/xcview/images/QA_solution..png" alt="" class="QA_solution_main_img" />
 						肌肉萎缩都有哪些早期的症状？治疗肌肉萎缩的最佳治疗方案
 					</div>
 					<div class="both"></div>
 				</div>
-				<div class=""></div>
 			</div>
+			<!-- 提问结束 -->
 		</div>
 		<!-- 老师解惑结束 -->
+		<!-- 在线弟子开始 -->
+		<div class="disciple_details">
+			<div class="disciple_title">
+				<span class="border"></span>
+				<span style="font-size: 0.28rem;">弟子：24人</span>
+				<div class="both"></div>
+			</div>
+			<div class="disciple_main">
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<img src="/xcview/images/physician_pic.png" alt="" />
+				<div class="both"></div>
+			</div>
+			<!-- 如何成为弟子 -->
+			<div class="become_disciple">
+				<img src="/xcview/images/QA_solution..png" alt="" class="" />
+				<div class="become_disciple_main">
+					<div class="become_disciple_title">如何成为弟子</div>
+					<div class="become_disciple_cen">
+						1.提交申请，符合条件的，安排面谈之后，可成为弟子；
+						2.在医师收徒的时候，也可成为弟子。
+					</div>
+					<div class="become_disciple_title">弟子福利</div>
+					<div class="become_disciple_cen">
+						1.老师定期有跟师观摩的课程，有弟子有资格参与；
+						2.针对观摩或者实际工作过程中的案例进行提问学习；
+						3.预约远程协助问诊。
+					</div>
+				</div>
+			</div>
+			<div class="disciple_application">在线弟子申请加入</div>
+		</div>
+		<!-- 在线弟子结束 -->
 	</div>
 	<!-- 师承结束 -->
+	<!-- 师承课程提示开始 -->
+	<div class="learn_tips">
+		<div class="learn_tips_bg"></div>
+		<div class="learn_tips_main">
+			
+		</div>
+	</div>
+	<!-- 师承课程提示结束 -->
+
 
 	<!-- 介绍开始 -->
 	<div class="message_referral" id="message_referral">
