--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -151,9 +151,9 @@
 					    top: 5.4rem; */
 		}
 
-		.minirefresh-wrap{
+		/*.minirefresh-wrap{
 			position: static !important;
-		}
+		}*/
 
 
 
@@ -566,7 +566,6 @@
 					{{if item.stick}}
 					<span class="stick_img"><img src="/xcview/images/stick.png" alt="" />置顶</span>
 					{{/if}}
-					<span class="title">{{item.title}}</span>
 					<span class="titles show-text">{{item.content}}</span>
 					<div class="both"></div>
 				</div>
