提问。申请页面添加

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1145,7 +1145,7 @@
 			<div class="QA_title">
 				<span class="border"></span>
 				<span style="font-size: 0.28rem;float: left;">老师解惑</span>
-				<div class="QA_quiz">
+				<div class="QA_quiz" onclick="location.href ='/xcview/html/physician/quiz.html'">
 					<img src="/xcview/images/doubt.png" alt="" />
 					我要提问
 				</div>
