修改--提问提示图片

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1199,7 +1199,7 @@
 			</div>
 			<!-- 如何成为弟子 -->
 			<div class="become_disciple">
-				<img src="/xcview/images/QA_solution..png" alt="" class="" />
+				<img src="/xcview/images/become_disciple.png" alt="" class="" />
 				<div class="become_disciple_main">
 					<div class="become_disciple_title">如何成为弟子</div>
 					<div class="become_disciple_cen">
