--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -214,7 +214,7 @@
 </script>
 <script>
     // 控制手机物理键--返回
-    /*window.onload = function () {
+    window.onload = function () {
         if (window.history && window.history.pushState) {
             $(window).on('popstate', function () {
                 var hashLocation = location.hash;
@@ -238,6 +238,6 @@
             });
             window.history.pushState('forward', null, './inherited_introduction.html?merId=' + merId);
         }
-    };*/
+    };
 </script>
 </html>
