--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -223,7 +223,7 @@
 							</span>
 
 							<div class="littleBox">
-								<p class="activeP" data-name="menu4-1">跟师直播</p>
+								<p class="activeP" data-name="menu4-1">师承直播</p>
 								<p data-name="menu4-2">我的弟子</p>
 								<p data-name="menu4-3">问答解惑</p>
 								<p data-name="menu4-4">师承管理</p>
@@ -891,6 +891,7 @@
 				</div>
 				<!--收徒-->
 				<div class="select_box">
+					<!--师承直播-->
 					<div class="little_box" style="display: block;">
 						<div class="live-top-title">
 							<span>师承直播</span>
@@ -1064,12 +1065,142 @@
 							</div>
 						</div>
 					</div>
+					<!--我的弟子-->
 					<div class="little_box">
-						我的弟子
+						<div class="disciple-top-title">
+							<span>我的弟子</span>
+						</div>
+						<div class="myself-disciple-wrap">
+							<div class="myself-disciple-search">
+								<select class="myself-select-haedeer" name="">
+									<option value="">全部</option>
+								</select>
+								<select class="myself-select-right" name="">
+									<option value="">徒弟</option>
+								</select>
+							</div>
+							<div class="myself-disciple-list">
+								<table border="" cellspacing="" cellpadding="">
+									<tr>
+										<th>姓名</th>
+										<th>手机号</th>
+										<th>性别</th>
+										<th>年龄</th>
+										<th>学历</th>
+										<th>籍贯</th>
+										<th>报名时间</th>
+										<th>是否徒弟</th>
+										<th>操作</th>
+									</tr>
+									<tr>
+										<td>Data</td>
+										<td>Data</td>
+										<td>Data</td>
+										<td>Data</td>
+										<td>Data</td>
+										<td>Data</td>
+										<td>Data</td>
+										<td>Data</td>
+										<td>
+											<span class="see-disciple">查看</span>
+										</td>
+									</tr>
+								</table>
+							</div>
+						</div>
+						<!--查看徒弟模态框-->
+						<div class="see-disciple-modal hide">
+							<div class="see-modal-top">
+								<p>查看</p>
+								<span><img src="/web/images/cha.png" alt="关闭"/></span>
+							</div>
+							<!--姓名-->
+							<div class="see-modal-scroll">
+								<div class="comment-see-modal">
+									<span>姓名</span>
+									<p class="see-comment-text">查看查看</p>
+								</div>
+
+							<!--手机号-->
+
+								<div class="comment-see-modal">
+									<span>姓名</span>
+									<p class="see-comment-text">查看查看</p>
+								</div>
+
+							<!--年龄-->
+
+								<div class="comment-see-modal">
+									<span>姓名</span>
+									<p class="see-comment-text">查看查看</p>
+								</div>
+
+							<!--性别-->
+
+								<div class="comment-see-modal">
+									<span>姓名</span>
+									<p class="see-comment-text">查看查看</p>
+								</div>
+
+							<!--籍贯-->
+
+								<div class="comment-see-modal">
+									<span>姓名</span>
+									<p class="see-comment-text">查看查看</p>
+								</div>
+
+							<!--学历-->
+
+								<div class="comment-see-modal">
+									<span>姓名</span>
+									<p class="see-comment-text">查看查看</p>
+								</div>
+							</div>
+							<!--通过/不通过-->
+							
+							<div class="comment-see-modal" style="padding: 30px 0 50px 0;">
+								<span style="height: 3px;"></span>
+								<button class="adopt-disciple" type="button">审核通过</button>
+								<button class="not-adopt-disciple" type="button">审核不通过</button>
+							</div>	
+						</div>
 					</div>
+					<!--问答解惑-->
 					<div class="little_box">
-						问答解惑
+						<div class="answer-top">
+							<span>问答解惑</span>
+						</div>
+						<div class="answer-list-main">
+							<div class="answer-list-search">
+								<span>选择分类：</span>
+								<select name="">
+									<option value="">全部</option>
+
+								</select>
+							</div>
+							<div class="answer-list-table">
+							<table border="" cellspacing="" cellpadding="">
+								<tr>
+									<th>提问者</th>
+									<th>问题</th>
+									<th>回答</th>
+									<th>报名时间</th>
+									<th>操作</th>
+								</tr>
+								<tr>
+									<td>Data</td>
+									<td>Data</td>
+									<td>Data</td>
+									<td>Data</td>
+									<td>
+										<span>编辑</span>
+									</td>
+								</tr>
+							</table>
+						</div>
 					</div>
+						</div>
+						
 					<div class="little_box">
 						师承管理
 					</div>
