增加提交预约信息页面

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1050,6 +1050,34 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- 远程诊疗开始 -->
+		<div class="therapy">
+			<div class="therapy_title">
+				<span class="border"></span>
+				<span style="font-size: 0.28rem;float: left;">远程诊疗</span>
+				<span class="master_course_span">开放远程诊疗预约时间，仅弟子可预约</span>
+				<div class="both"></div>
+			</div>
+			<div class="subscribe">
+				<div class="subscribe_time">6月23日  星期四  9:00-10:30</div>
+				<div class="subscribe_btn" onclick="location.href ='/xcview/html/physician/reserve_information.html'">预约</div>
+				<div class="subscribe_btns" style="display: none;">已预约</div>
+			</div>
+			<div class="subscribe">
+				<div class="subscribe_time">6月24日  星期五  9:00-10:30</div>
+				<div class="subscribe_btn" style="display: none;">预约</div>
+				<div class="subscribe_btns">已预约</div>
+			</div>
+			<div class="subscribe">
+				<div class="subscribe_time">6月25日  星期六  9:00-10:30</div>
+				<div class="subscribe_btn" style="display: none;">预约</div>
+				<div class="subscribe_btns">已预约</div>
+			</div>
+			
+		</div>
+		<!-- 远程诊疗结束 -->
+
 		<!-- 跟师课程开始 -->
 		<div class="wrap_vedio_main">
 			<div class="wrap_vedio" style="padding-bottom: 0;" id="master_course">
@@ -1199,7 +1227,7 @@
 			</div>
 			<!-- 如何成为弟子 -->
 			<div class="become_disciple">
-				<img src="/xcview/images/become_disciple.png" alt="" class="" />
+				<img src="/xcview/images/become_disciple.png" alt="" class="become_disciple_img" />
 				<div class="become_disciple_main">
 					<div class="become_disciple_title">如何成为弟子</div>
 					<div class="become_disciple_cen">
