--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1179,7 +1179,7 @@
 								</select>
 							</div>
 							<div class="answer-list-table">
-							<table border="" cellspacing="" cellpadding="">
+								<table border="" cellspacing="" cellpadding="">
 								<tr>
 									<th>提问者</th>
 									<th>问题</th>
@@ -1189,17 +1189,65 @@
 								</tr>
 								<tr>
 									<td>Data</td>
-									<td>Data</td>
-									<td>Data</td>
-									<td>Data</td>
+									<td>
+										<div class="question">
+											全部全部全部全部全部全部
+											全部全部全部全部全部全部
+											全部全部全部全部全部全部全部
+											全部全部全部全部全部全部全部
+											全部全部全部全部全部全部全部全部全部全部全部全部全部全部
+											全部全部全部全部全部全部全部
+											全部全部全部全部全部全部全部全部
+										</div>
+									</td>
+									<td>
+										<div class="answer">
+											全部全部全部全部全部全部
+											全部全部全部全部全部全部
+											全部全部全部全部全部全部全部
+											全部全部全部全部全部全部全部
+											全部全部全部全部全部全部全部全部全部全部全部全部全部全部
+											全部全部全部全部全部全部全部
+											全部全部全部全部全部全部全部全部
+										</div>
+									</td>
+									<td></td>
 									<td>
 										<span>编辑</span>
 									</td>
 								</tr>
 							</table>
+							</div>
+						</div>
+						<!--编辑回复-->
+						<div class="answer-edit-replay hide">
+							<div class="edit-replay-top">
+								<p>编辑</p>
+								<span><img src="/web/images/cha.png" alt="关闭"/></span>
+							</div>
+							<div class="querst-list">
+								<span>问题</span>
+								<p>
+									编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑
+									编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑
+									编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑
+									编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑
+									编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑
+									编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑
+									编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑
+									编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑编辑
+								</p>
+							</div>
+							<div class="querst-list">
+								<span>回复</span>
+								<textarea name="" rows="" cols=""></textarea>
+							</div>
+							<div class="querst-list">
+								<span style="height: 2px;"></span>
+								<button type="button">提交</button>
+							</div>
 						</div>
 					</div>
-						</div>
 						
 					<div class="little_box">
 						师承管理
