--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1213,7 +1213,7 @@
 									</td>
 									<td></td>
 									<td>
-										<span>编辑</span>
+										<span class="edit-question">编辑</span>
 									</td>
 								</tr>
 							</table>
