--- a/wechat/src/main/webapp/xcview/html/apprentice/apply.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apply.html
@@ -17,7 +17,8 @@
 	<!-- 报名头部开始 -->
 	<header>
 		<div class="header">
-			<div class="return" onclick="location.href='/xcview/html/apprentice/inherited_introduction.html'"><img src="/xcview/images/back%20icon.png" alt="" /></div>
+			<!-- <div class="return" onclick="location.href='/xcview/html/apprentice/inherited_introduction.html'"><img src="/xcview/images/back%20icon.png" alt="" /></div> -->
+			<div class="return" onclick="location.href='javascript:history.go(-1)'"><img src="/xcview/images/back%20icon.png" alt="" /></div>
 			<div class="apply_title">报名</div>
 		</div>
 	</header>
@@ -141,7 +142,8 @@
 	          	if(hashName !== '') {  
 	              	var hash = window.location.hash;  
 	              	if(hash === '') {  
-	                  	location.href ='/xcview/html/apprentice/inherited_introduction.html'  	/*跳转链接*/
+	                  	//location.href ='/xcview/html/apprentice/inherited_introduction.html'  	/*跳转链接*/
+	              		window.history.back();
 	              	}  
 	          	}  
 	      	});  
