--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -43,14 +43,18 @@
 		    if (r!=null) return r[2];else return'';
 		}
 		var type = getQueryString('type');
-		if(type=='1'){
+/* 		if(type=='1'){
 			location.replace("/xcview/html/my_study.html");
 		}else if(type=='2'){
-			location.replace("/xcview/html/live_select_album.html?course_id="+collectionId);
+			//location.replace("/xcview/html/live_select_album.html?course_id="+collectionId);
+			location.href = "/xcview/html/live_select_album.html?course_id="+collectionId;
 		}else{
-			location.replace("/xcview/html/live_select_album.html?course_id="+collectionId);
-		}
-		getQueryString('name');
+			//location.replace("/xcview/html/live_select_album.html?course_id="+collectionId);
+			location.href = "/xcview/html/live_select_album.html?course_id="+collectionId;
+		} */
+		//getQueryString('name');
+		
+		window.history.back();
 	};
 
 </script>
@@ -632,7 +636,7 @@ $.fn.toggle = function( fn, fn2 ) {
 
 <script> 
 // 控制手机物理键--返回
-/*window.onload = function(){
+/* window.onload = function(){
   if(window.history && window.history.pushState) {  
       $(window).on('popstate', function() {  
           var hashLocation = location.hash;  
@@ -641,15 +645,14 @@ $.fn.toggle = function( fn, fn2 ) {
           if(hashName !== '') {  
               var hash = window.location.hash;  
               if(hash === '') {  
-                  location.href ='/xcview/html/live_select_album.html?course_id=' + collectionId;
-                  
+            	  location.replace('/xcview/html/live_select_album.html?course_id=' + collectionId);
               }  
           }  
       });  
 	var urlstr = window.location.href;
     window.history.pushState('forward', null,urlstr);    
   }
-};*/
+}; */
 </script> 
 
 
