发现--测试倒计时。修改--线下课提交按钮，医师-线下课点击。替换公共文件

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -68,7 +68,8 @@
     <!-- 中间内容开始 -->
     <div class="main">
         
-        <div class="count_down">报名截止时间&nbsp;&nbsp;<span>{{deadline}}</span></div>
+        <!--<div class="count_down">报名截止时间&nbsp;&nbsp;<span>{{deadline}}</span></div>-->
+        <div class="count_down" id="box1"></span></div>
         <div class="intro_title_bg">
             <div class="intro_title">{{title}}</div>
                 <div class="head_portrait">
