--- a/wechat/src/main/webapp/xcview/html/line_class.html
+++ b/wechat/src/main/webapp/xcview/html/line_class.html
@@ -66,7 +66,7 @@
 			
 			<div class="both"></div>
 		</div>
-		<div class="buttom opacity" data-able="1">提交</div>
+		<div class="buttom opacity" data-able="1" style="opacity: 0.3;">提交</div>
 		<div class="both"></div>
 		<div class="weixin">
 			<div class="weixin_hint">如何获取您的微信号：<br />打开手机微信，选择我，在昵称下方即为您的微信号</div>
