--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -40,6 +40,12 @@
             float: left;
             margin-left: 0.1rem;
         }
+        .times{
+            padding: 0 0.16rem;
+            background: #fff;
+            font-size: 0.28rem;
+            color: #F97B49;
+        }
 
     </style>
 </head>
