--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -783,7 +783,7 @@
 								<span><em>*</em>主讲人</span>
 								<input type="text" placeholder="" autocomplete="off" class="zhuanlan_title zhuanlan_title1 course_lecturer "/>
 								<span style="font-size: 14px;color: #999999;margin-left: 20px;">两个或两个以上请用逗号隔开</span>
-								<p class="warning warning_course_lecturer hide">主播不能为空</p>
+								<p class="warning warning_course_lecturer hide">主讲人不能为空</p>
 								<p class="warning warning_course_lecturer_length hide">姓名格式不正确</p>
 							</div>
 	
@@ -791,7 +791,7 @@
 								<span class="span" style="vertical-align: top;"><em>*</em>主讲人介绍</span>
 								<div class="" style="display: inline-block">
 									<script id="editor" type="text/plain" style="width:540px;height:160px;"></script></div>
-								<p class="warning warning_course_lecturer_description hide">主播介绍不能为空</p>
+								<p class="warning warning_course_lecturer_description hide">主讲人介绍不能为空</p>
 							</div>
 	
 							<div id="resourceTypes">
@@ -815,7 +815,6 @@
 							</div>
 							<div class="select live offline special">
 								<span><em>*</em>开课时间</span>
-								<!--<input onclick="SetDate(this,'yyyy-MM-dd hh:mm')" placeholder="请选择开课时间" readonly="readonly" style="width: 280px;height: 36px;color: #999999 !important;font-size: 14px;" class="select_time course_start_time" />-->
 								<input type="text"  id="classOpenTiem" readonly="readonly" placeholder="请选择开课时间" style="width: 280px;height: 36px;color: #999999 !important;font-size: 14px;" class="select_time course_start_time">
 								<p class="warning warning_course_start_time hide">开课时间不能为空</p>
 								<p class="warning warning_course_time1 hide">开课时间应大于当前时间</p>
@@ -824,8 +823,6 @@
 							<div class="select offline special">
 								<span><em>*</em>结课时间</span>
 								<input type="text"  id="classCloseTime" readonly="readonly" placeholder="请选择结课时间" style="width: 280px;height: 36px;color: #999999 !important;font-size: 14px;" class="select_time course_end_time">
-								
-								<!--<input onclick="SetDate(this,'yyyy-MM-dd hh:mm')" placeholder="请选择结课时间" style="width: 280px;height: 36px;color: #999999 !important;font-size: 14px;" readonly="readonly" class="select_time course_end_time" />-->
 								<p class="warning warning_course_end_time hide">结课时间不能为空</p>
 								<p class="warning warning_course_time hide">结课时间应大于开课时间</p>
 							</div>
@@ -851,9 +848,6 @@
 							</div>
 							<div>
 								<span><em>*</em>价格</span>
-								<!--<input type="text" placeholder=""  onkeyup="clearNoNum(this)" class="zhuanlan_title zhuanlan_title3 course_price" style="width: 120px;" onkeyup="value=value.replace(/[^\d]/g,'') "/>-->
-								<!--<input type = "text" name= "number" class="zhuanlan_title zhuanlan_title3 course_price"  onkeyup="clearNoNum(this)" id = 'number' onkeyup= "value=value.replace( /^d+$/,'')" />--> 
-								<!--<input type="text" maxlength="2" style="width: 120px;" class="zhuanlan_title zhuanlan_title3 course_price"  onkeyup="value=value.replace(/[^\d]/g,'')" onbeforepaste="clipboardData.setData('text',clipboardData.getData('text').replace(/[^\d]/g,''))">-->
 								<input class="zhuanlan_title zhuanlan_title3 course_price" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')">
 								<span>熊猫币</span><span style="color: #999;">(1元=10熊猫币)</span>
 								<p class="warning warning_course_price hide">价格不能为空</p>
