--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -53,11 +53,10 @@
 		display: block;
 	}
 	.swiper-pagination-bullet{
+		width: 0.22rem !important;
+	    border-radius: 8px !important;
+	    height: 0.06rem !important;
 		border: none !important;
-	}
-	.swiper-pagination-bullet{
-		width: 14px !important;
-		border-radius: 8px !important;
 	}
 	.swiper-pagination-bullet-active{
 		background: #00BC12 !important;
