--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -215,6 +215,9 @@
 	}
 	.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet:last-child{
 		margin-right: 0.26rem;
+		width: 0.22rem !important;
+	    border-radius: 8px !important;
+	    height: 0.06rem !important;
 	}
 	.swiper-slide img{
 		width: 100%;
