我的--距离顶部位置。。医师，默认点击动态

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1503,7 +1503,7 @@ $(window).bind("scroll", function() {
 			$(".message_referral").hide();   //介绍结束baseImagenumbers
 			$(".prose_origin").hide();   /*师承内容隐藏*/
 		});
-		// $(".li_data").click();
+		$(".li_data").click();
 
 		// 点击直播间
 		$(".li_course").click(function(){
@@ -1550,7 +1550,7 @@ $(window).bind("scroll", function() {
 			$(".message_referral").hide();  //介绍结束
 			// $(".broadcastroom").show();
 		});
-		$(".li_prose_origin").click();
+		/*$(".li_prose_origin").click();*/
 
 		// 点击介绍
 		$(".li_evaluate").click(function(){
