--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -489,11 +489,11 @@
 		<!-- 选项卡开始 -->
 		<div id="mainMenuBarAnchor"></div>
 		<div class="anchor_navigation" id="mainMenuBar">
-			<ul>
-				<li class="li li_data li_color"><span>全部</span>动态<img src="/xcview/images/drop_down.png" alt="" class="hide0" /></li>
-				<li class="li li_course">直播</li>
-				<li class="li li_prose_origin">师承</li>
-				<li class="li li_evaluate">介绍</li>
+			<ul id="mainMenu">
+				<li class="li li_data li_color" id="li-1"><span>全部</span>动态<img src="/xcview/images/drop_down.png" alt="" class="hide0" /></li>
+				<li class="li li_course" id="li-2">直播</li>
+				<li class="li li_prose_origin" id="li-3">师承</li>
+				<li class="li li_evaluate" id="li-4">介绍</li>
 				<div class="border" style="left: 1.04rem;"></div>
 				<div class="dynamic_opacity"></div>
 			</ul>
