提问页，提交信息

--- a/wechat/src/main/webapp/xcview/html/physician/quiz.html
+++ b/wechat/src/main/webapp/xcview/html/physician/quiz.html
@@ -58,7 +58,7 @@
 <script type="text/javascript" src="/xcview/js/physician/quiz.js"></script> 
 <script>
 	window.onload = function(){
-		$('.textarea').keyup(function(){
+		/*$('.textarea').keyup(function(){
 		    var textarea = $(".textarea").val();
 		    if(textarea==""||textarea==undefined){
 		        $(".quiz").css("opacity","0.3");
@@ -67,7 +67,7 @@
 		        $(".quiz").css("opacity","1");
 		        $(".quiz").css("background","#00bc12");
 		    }
-		})
+		})*/
 	};
 </script>
 <!-- 公用弹框 -->
