--- a/wechat/src/main/webapp/xcview/html/physician/application_approved.html
+++ b/wechat/src/main/webapp/xcview/html/physician/application_approved.html
@@ -15,7 +15,7 @@
 <body>
 <!-- 报名头部结束 -->
 <script id="entry_information_temp" type="text/html"> 
-	<!-- 报名头部开始 -->
+	<!-- 弟子申请成功头部开始 -->
 	<header>
 		<div class="header">
 			<div class="return" onclick="location.href='/xcview/html/physician/physicians_page.html'"><img src="/xcview/images/back%20icon.png" alt="" /></div>
@@ -107,7 +107,7 @@
 <!-- 中间内容结束 -->
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
-<script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1"></script>
+<script type="text/javascript" src="/xcview/js/common/common.js"></script>
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>   <!--模板引入-->
 <!-- <script type="text/javascript" src="/xcview/js/apprentice/apprentice-common.js"></script> -->
 <script type="text/javascript" src="/xcview/js/physician/application_approved.js"></script>
