判断修改信息--信息返回bug

--- a/wechat/src/main/webapp/xcview/html/physician/application_approved.html
+++ b/wechat/src/main/webapp/xcview/html/physician/application_approved.html
@@ -18,7 +18,7 @@
 	<!-- 弟子申请成功头部开始 -->
 	<header>
 		<div class="header">
-			<div class="return" onclick="location.href='/xcview/html/physician/physicians_page.html'"><img src="/xcview/images/back%20icon.png" alt="" /></div>
+			<div class="return" onclick="location.href='/xcview/html/physician/physicians_page.html?doctor='+doctorId"><img src="/xcview/images/back%20icon.png" alt="" /></div>
 			<div class="apply_title">弟子申请成功</div>
 		</div>
 	</header>
