--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -430,8 +430,8 @@
 		<div class="wrap-header" id="header">
 			<div class="header">		
 				<p>{{items.lecturerInfo.name}}</p>
-				<!-- <div class="arror_return" onclick="javascript:history.back(-1);" >  -->
-                <div class="arror_return" onclick="common_share_back();">
+				<!--<div class="arror_return" onclick="location.href='javascript:history.go(-1)'" >-->
+                <div class="arror_return" onclick="common_share_backs();"> 
 					<img src="/xcview/images/anchorj.png"/>
 				</div>
 				<div class="header_news" onclick="header_click()">
@@ -1255,7 +1255,19 @@
 					</div>
 				</div>
 			</div>
-			<div class="disciple_application" onclick="location.href ='/xcview/html/physician/apply_for.html?doctor='+doctorId">在线弟子申请加入</div>
+			<div class="disciple_application_state">
+				<script type="text/html" id="disciple_application_state_id">
+					{{if items.onlineApprenticeStatus == 1 || items.onlineApprenticeStatus == 3}}
+					<div class="disciple_application" onclick="location.href ='/xcview/html/physician/apply_for.html?doctor='+doctorId">在线弟子申请加入</div>
+					{{else if items.onlineApprenticeStatus == 2}}
+						<div class="disciple_application" onclick="location.href ='/xcview/html/physician/application_approved.html?doctor='+doctorId">申请已提交</div>
+					{{else if items.onlineApprenticeStatus == 4}}
+						<div class="disciple_application" style="display: none;">申请已提交</div>
+
+					{{/if}}
+				</script>
+			</div>
+			
 		</div>
 		<!-- 在线弟子结束 -->
 	</div>
@@ -1881,7 +1893,8 @@ function header_click(){
     $("body").height(body);
 
 </script>
-<script type="text/javascript" src="/xcview/html/physician/js/amazeui.js?version=5bdfd7fbfe"></script>
+<script type="text/javascript" src="/xcview/html/physician/js/amazeui.js"></script>
+
 
 </html>
 
