--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -748,7 +748,7 @@
 						</div>
 					{{else if items.lineState == 2 || items.lineState == 4 || items.lineState == 5}}
 						<div class="count_down">
-							<div class="count_down_title" style="margin-top: 0rem;margin-bottom:0.4rem;"><span class="count_down_title_span">即将直播：</span></div>
+							<div class="count_down_title" style="margin-top: 0rem;margin-bottom:0.4rem;"><span class="count_down_title_span">即将直播：</span>{{items.gradeName}}</div>
 							<div id="box1"></div>
 						</div>
 					{{else if items.lineState == 3}}
@@ -1190,20 +1190,20 @@
 			<!-- 提问开始 -->
 			<div class="QA_main">
 				<script type="text/html" id="QA_main_id">
-					{{each items as item i}} 
+				{{each items as item i}} 
 				<div class="QA_doubt">
-					<img src="/xcview/images/touxiang.png" alt="" class="QA_doubt_img" />
+					<img src="{{item.userImg}}" alt="" class="QA_doubt_img" />
 					<div class="QA_doubt_main">
 						<img src="/xcview/images/QA_doubt.png" alt="" class="QA_doubt_main_img" />
-						肌肉萎缩都有哪些早期的症状？治疗肌肉萎缩的最佳治疗方案
+						{{item.question}}
 					</div>
 					<div class="both"></div>
 				</div>
 				<div class="QA_solution">
-					<img src="/xcview/images/touxiang.png" alt="" class="QA_solution_img" />
+					<img src="{{item.doctorImg}}" alt="" class="QA_solution_img" onerror="nofind()" />
 					<div class="QA_solution_main">
 						<img src="/xcview/images/QA_solution..png" alt="" class="QA_solution_main_img" />
-						肌肉萎缩都有哪些早期的症状？治疗肌肉萎缩的最佳治疗方案
+						{{item.answer}}
 					</div>
 					<div class="both"></div>
 				</div>
@@ -1218,24 +1218,17 @@
 		<div class="disciple_details">
 			<div class="disciple_title">
 				<span class="border"></span>
-				<span style="font-size: 0.28rem;">弟子：24人</span>
+				<span style="font-size: 0.28rem;">弟子：<span class="disciple_number">0</span>人</span>
 				<div class="both"></div>
 			</div>
 			<div class="disciple_main">
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
-				<img src="/xcview/images/physician_pic.png" alt="" />
+	            <div class="disciple_main_id">
+	            	<script type="text/html" id="disciple_main_id">
+					{{each items as item i}} 
+						<img src="{{item}}" alt="" class="disciple_main_apprentices" />
+					{{/each}}
+		            </script>
+	            </div>
 				<div class="both"></div>
 			</div>
 			<!-- 如何成为弟子 -->
@@ -1894,7 +1887,6 @@ function header_click(){
 
 </script>
 <script type="text/javascript" src="/xcview/html/physician/js/amazeui.js"></script>
-
 
 </html>
 
