弟子选择：全选全不选

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1311,7 +1311,7 @@
 									</ul>
 								</div>
 								<div class="all-select-pupil">
-									<div class="all-select-main z">
+									<div class="all-select-main z all-select">
 										<p>
 											<img src="/web/images/btn-ondown.png" alt="选择"/>
 										</p>
